--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/CoditechApplicationSetting/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/CoditechApplicationSetting/_List.cshtml
@@ -19,9 +19,9 @@
                     {
                         <tr>
                             <td>@item.ApplicationCode</td>
-                            <td>@item.ApplicationValue1</td>
-                            <td>@item.ApplicationValue2</td>
-                            <td>@item.ApplicationValue3</td>
+                            <td style="max-width: 200px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">@item.ApplicationValue1</td>
+                            <td style="max-width: 200px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">@item.ApplicationValue2</td>
+                            <td style="max-width: 200px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">@item.ApplicationValue3</td>
                             <td class="text-center">
                                 <a href="../@controllerName/Edit?coditechApplicationSettingId=@item.CoditechApplicationSettingId" title="Update" class="btn btn-sm btn-soft-success btn-circle me-2"><i class="fas fa-edit"></i></a>
                                 @* <span class="m-2">|</span> *@
