--- a/Coditech.Project/Admin/Coditech.Admin/Views/Inventory/InventoryCategory/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Inventory/InventoryCategory/CreateEdit.cshtml
@@ -6,72 +6,67 @@
     DropdownViewModel parentInventoryCategorys = new DropdownViewModel() { DropdownType = DropdownTypeEnum.InventoryCategory.ToString(), DropdownName = "ParentInventoryCategoryId", DropdownSelectedValue = Model.ParentInventoryCategoryId.ToString(), ChangeEvent = "", Parameter = Model.InventoryCategoryId.ToString(), IsRequired = false };
     DropdownViewModel inventoryCategoryType = new DropdownViewModel() { DropdownType = DropdownTypeEnum.InventoryCategoryType.ToString(), DropdownName = "InventoryCategoryTypeMasterId", DropdownSelectedValue = Model.InventoryCategoryTypeMasterId.ToString() };
 
+    PageHeaderViewModel headerModel = new PageHeaderViewModel
+    {
+        Title = ViewBag.Title,
+        SaveButtonText = GeneralResources.SaveButtonText,
+        CancelUrl = Url.Action(AdminConstants.ActionRedirectToList, controllerName),
+        CancelButtonText = GeneralResources.CancelButtonText,
+        ControllerName = controllerName,
+        ActionName = actionName,
+        FormId = AdminConstants.FormId + controllerName,
+    };
 }
 <!-- Page Content-->
-<div class="page-content mt-5">
-    <div class="container-fluid">
+<div class="page-content">
+    <div class="container-fluid mt-5">
         <div class="row">
             <div class="col-lg-12">
-                <div class="card">
-                    <div class="card-header">
-                        <div class="row align-items-center">
-                            <div class="col">
-                                @if (Model.InventoryCategoryId > 0)
-                                {
-                                    <h4 class="card-title">Update Inventory Category</h4>
-                                }
-                                else
-                                {
-                                    <h4 class="card-title">Create Inventory Category</h4>
-                                }
-                            </div><!--end col-->
-                        </div>  <!--end row-->
-                    </div>
-                    <div class="card-body">
-                        @using (Html.BeginForm(actionName, controllerName, FormMethod.Post))
-                        {
-                            @Html.HiddenFor(m => m.InventoryCategoryId)
-                            <div class="row">
-                                <div class="col-lg-4">
-                                    <div class="mb-3">
-                                        @Html.LabelFor(x => x.CategoryName, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.CategoryName, new { @class = "form-control" })
-                                        @Html.ValidationMessageFor(x => x.CategoryName)
-                                    </div>
-                                </div>
-                                <div class="col-lg-4">
-                                    <div class="mb-3">
-                                        @Html.LabelFor(x => x.CategoryCode, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.CategoryCode, new { @class = "form-control", @onkeypress = "return CoditechCommon.AvoidSpacing()" })
-                                        @Html.ValidationMessageFor(x => x.CategoryCode)
-                                    </div>
-                                </div>
-                                <div class="col-lg-4">
-                                    <div class="mb-3">
-                                        @Html.LabelFor(x => x.ItemPrefix, new { @class = "form-label" })
-                                        @Html.TextBoxFor(x => x.ItemPrefix, new { @class = "form-control", @onkeypress = "return CoditechCommon.AvoidSpacing()" })
-                                        @Html.ValidationMessageFor(x => x.ItemPrefix)
-                                    </div>
-                                </div>
-                                <div class="col-lg-4">
-                                    <div class="mb-3">
-                                        @Html.LabelFor(x => x.InventoryCategoryTypeMasterId, new { @class = "form-label required" })
-                                        @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", inventoryCategoryType)
-                                        @Html.ValidationMessageFor(x => x.InventoryCategoryTypeMasterId)
-                                    </div>
-                                </div>
-                                <div class="col-lg-4">
-                                    <div class="mb-3">
-                                        @Html.LabelFor(x => x.ParentInventoryCategoryId, new { @class = "form-label" })
-                                        @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", parentInventoryCategorys)
-                                        @Html.ValidationMessageFor(x => x.ParentInventoryCategoryId)
-                                    </div>
+                <div class="card-body">
+                    @using (Html.BeginForm(actionName, controllerName, FormMethod.Post, new { id = headerModel.FormId }))
+                    {
+                        @Html.Partial("~/Views/Shared/_SaveAndCloseButtonLayout.cshtml", headerModel)
+                        @Html.HiddenFor(m => m.InventoryCategoryId)
+                        <div class="row">
+                            <div class="col-lg-4">
+                                <div class="mb-3">
+                                    @Html.LabelFor(x => x.CategoryName, new { @class = "form-label required" })
+                                    @Html.TextBoxFor(x => x.CategoryName, new { @class = "form-control" })
+                                    @Html.ValidationMessageFor(x => x.CategoryName)
                                 </div>
                             </div>
-                            <button type="submit" class="btn btn-success">@AdminResources.LabelSave</button>
-                            <a href="../@controllerName/List" class="btn btn-secondary"><i class="ft-x"></i>@AdminResources.LabelCancel</a>
-                        }
-                    </div>
+                            <div class="col-lg-4">
+                                <div class="mb-3">
+                                    @Html.LabelFor(x => x.CategoryCode, new { @class = "form-label required" })
+                                    @Html.TextBoxFor(x => x.CategoryCode, new { @class = "form-control", @onkeypress = "return CoditechCommon.AvoidSpacing()" })
+                                    @Html.ValidationMessageFor(x => x.CategoryCode)
+                                </div>
+                            </div>
+                            <div class="col-lg-4">
+                                <div class="mb-3">
+                                    @Html.LabelFor(x => x.ItemPrefix, new { @class = "form-label" })
+                                    @Html.TextBoxFor(x => x.ItemPrefix, new { @class = "form-control", @onkeypress = "return CoditechCommon.AvoidSpacing()" })
+                                    @Html.ValidationMessageFor(x => x.ItemPrefix)
+                                </div>
+                            </div>
+                            <div class="col-lg-4">
+                                <div class="mb-3">
+                                    @Html.LabelFor(x => x.InventoryCategoryTypeMasterId, new { @class = "form-label required" })
+                                    @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", inventoryCategoryType)
+                                    @Html.ValidationMessageFor(x => x.InventoryCategoryTypeMasterId)
+                                </div>
+                            </div>
+                            <div class="col-lg-4">
+                                <div class="mb-3">
+                                    @Html.LabelFor(x => x.ParentInventoryCategoryId, new { @class = "form-label" })
+                                    @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", parentInventoryCategorys)
+                                    @Html.ValidationMessageFor(x => x.ParentInventoryCategoryId)
+                                </div>
+                            </div>
+                        </div>
+                      @*   <button type="submit" class="btn btn-success">@AdminResources.LabelSave</button>
+                        <a href="../@controllerName/List" class="btn btn-secondary"><i class="ft-x"></i>@AdminResources.LabelCancel</a> *@
+                    }
                 </div>
             </div>
         </div>
