--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralBatchMaster/CreateEditGeneralBatch.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralBatchMaster/CreateEditGeneralBatch.cshtml
@@ -6,14 +6,22 @@
     string css = Model.GeneralBatchMasterId > 0 ? "col-lg-10" : "col-lg-12";
     Dictionary<string, string> keyValuePairs = new Dictionary<string, string>();
     keyValuePairs.Add("GeneralBatchMasterId", Model.GeneralBatchMasterId.ToString());
-
     DropdownViewModel centreDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.AccessibleCentre.ToString(), DropdownName = "CentreCode", DropdownSelectedValue = Model.CentreCode, IsDisabled = Model.GeneralBatchMasterId > 0 };
-
     DropdownViewModel frequencyDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.SchedulerFrequency.ToString(), DropdownName = "BatchFrequency", DropdownSelectedValue = Model.BatchFrequency, ExcludedValues = new string[] { "Recurring", "Weekly" } };
+    PageHeaderViewModel headerModel = new PageHeaderViewModel
+    {
+        Title = ViewBag.Title,
+        SaveButtonText = GeneralResources.SaveButtonText,
+        CancelUrl = Url.Action(AdminConstants.ActionRedirectToList, controllerName, new { SelectedCentreCode = Model.CentreCode }),
+        CancelButtonText = GeneralResources.CancelButtonText,
+        ControllerName = controllerName,
+        ActionName = actionName,
+        FormId = AdminConstants.FormId + controllerName,
+    };
 }
 <!-- Page Content-->
-<div class="page-content mt-5">
-    <div class="container-fluid">
+<div class="page-content">
+    <div class="container-fluid mt-5">
         <div class="row">
             @if (Model.GeneralBatchMasterId > 0)
             {
@@ -23,23 +31,10 @@
             }
             <div class="@css">
                 <div class="card">
-                    <div class="card-header">
-                        <div class="row align-items-center">
-                            <div class="col">
-                                @if (Model.GeneralBatchMasterId > 0)
-                                {
-                                    <h4 class="card-title">Update Batch Details</h4>
-                                }
-                                else
-                                {
-                                    <h4 class="card-title">Create Batch</h4>
-                                }
-                            </div><!--end col-->
-                        </div>  <!--end row-->
-                    </div>
                     <div class="card-body">
-                        @using (Html.BeginForm(actionName, controllerName, FormMethod.Post))
+                        @using (Html.BeginForm(actionName, controllerName, FormMethod.Post, new { id = headerModel.FormId }))
                         {
+                            @Html.Partial("~/Views/Shared/_SaveAndCloseButtonLayout.cshtml", headerModel)
                             @Html.HiddenFor(m => m.GeneralBatchMasterId)
                             @Html.HiddenFor(x => x.WeekDays)
                             @if (Model.GeneralBatchMasterId > 0)
@@ -103,35 +98,30 @@
                                         @Html.LabelFor(x => x.Duration, new { @class = "form-label required" })
                                         <div class="d-flex gap-3">
                                             @Html.DropDownListFor(x => x.DurationHours,
-                                                     new SelectList(Enumerable.Range(0, 12).Select(i => new { Value = i.ToString("D2"), Text = i.ToString("D2") }),
-                                                     "Value", "Text"),
-                                                     "HH",
-                                                     new { @class = "form-select" })
+                                            new SelectList(Enumerable.Range(0, 12).Select(i => new { Value = i.ToString("D2"), Text = i.ToString("D2") }),
+                                            "Value", "Text"),
+                                                                                "HH",
+                                                                                new { @class = "form-select" })
 
-                                            @Html.DropDownListFor(x => x.DurationMinutes,
-                                                     new SelectList(Enumerable.Range(0, 60).Where(i => i % 5 == 0).Select(i => new { Value = i.ToString("D2"), Text = i.ToString("D2") }),
-                                                     "Value", "Text"),
-                                                     "MM",
-                                                     new { @class = "form-select" })
-                                        </div>
-                                        @Html.ValidationMessageFor(x => x.Duration)
+                                        @Html.DropDownListFor(x => x.DurationMinutes,
+                                                                                new SelectList(Enumerable.Range(0, 60).Where(i => i % 5 == 0).Select(i => new { Value = i.ToString("D2"), Text = i.ToString("D2") }),
+                                                                                "Value", "Text"),
+                                                                                "MM",
+                                                                                new { @class = "form-select" })
                                     </div>
+                                    @Html.ValidationMessageFor(x => x.Duration)
                                 </div>
-                                <div class="col-lg-2">
-                                    <div class="mb-3">
-                                        @Html.LabelFor(x => x.IsActive, new { @class = "form-label" })
-                                        <div class="form-check">
-                                            @Html.CheckBoxFor(x => x.IsActive, new { @class = "form-check-input" })
-                                        </div>
+                            </div>
+                            <div class="col-lg-2">
+                                <div class="mb-3">
+                                    @Html.LabelFor(x => x.IsActive, new { @class = "form-label" })
+                                    <div class="form-check">
+                                        @Html.CheckBoxFor(x => x.IsActive, new { @class = "form-check-input" })
                                     </div>
                                 </div>
                             </div>
-                            <button type="submit" class="btn btn-success">@AdminResources.LabelSave</button>
-                            <a href="@Url.Action("Cancel", controllerName, new { SelectedCentreCode = Model.CentreCode })"
-                               class="btn btn-secondary">
-                                <i class="ft-x"></i>@AdminResources.LabelCancel
-                            </a>
-                          }
+                        </div>
+                                                }
                     </div>
                 </div>
             </div>
